--- a/drainage/composer.json
+++ b/drainage/composer.json
@@ -19,8 +19,12 @@
             "database"
         ],
         "psr-4": {
-            "App\\": "app/"
-        }
+            "App\\": "app/",
+            "Support\\":"support/"
+        },
+        "files": [
+            "support/helpers.php"
+            ]
     },
     "autoload-dev": {
         "psr-4": {
